--- a/requirements.txt
+++ b/requirements.txt
@@ -2,9 +2,9 @@ docutils==0.13.1
 imagesize==0.7.1
 Jinja2==2.8
 MarkupSafe==0.23
-matplotlib==1.5.3
+matplotlib>=1.5.3
 nose==1.3.7
-numpy==1.11.2
+numpy>=1.11.2
 numpydoc==0.6.0
 pdfrw==0.3
 Pillow==3.4.2
@@ -14,7 +14,7 @@ python-dateutil==2.6.0
 pytz==2016.10
 reportlab==3.3.0
 requests==2.12.3
-scipy==0.18.1
+scipy>=0.18.1
 six==1.10.0
 snowballstemmer==1.2.1
 Sphinx==1.5
